# rotorenv

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: curriculum_demo.py  random_agent.py  render_6dof.py  render_flight.py  train_nav_curriculum.py  train_ppo.py  wrapped_agent.py
notebooks/: rotorenv_colab_train.ipynb  rotorenv_colab_train.py
rotorenv/: __init__.py
rotorenv/core/: __init__.py  action.py  enums.py  reward.py  rotations.py  state.py
rotorenv/envs/: __init__.py  base_env.py  curriculum.py  hover_env.py  navigation_env.py  trajectory_env.py  waypoint_env.py  wrappers.py
rotorenv/physics/: __init__.py  base_physics.py  point_mass.py  six_dof.py
rotorenv/rendering/: __init__.py  depth_camera.py  matplotlib_renderer.py  pyvista_renderer.py
scripts/: build_notebook.py
tests/: test_conformance.py  test_curriculum.py  test_env.py  test_navigation.py  test_navigation_depth.py  test_physics.py  test_pyvista_renderer.py  test_reward.py  test_rotations.py  test_six_dof.py  test_tasks.py  test_wrappers.py
