[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rotorenv"
version = "0.1.0"
description = "A lightweight, Gymnasium-compatible RL environment for quadrotor control."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.23",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["rotorenv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
