[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rotorenv"
version = "0.1.0"
description = "A lightweight, Gymnasium-compatible RL environment for quadrotor control."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.23",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
# Reinforcement-learning extras: NOT part of the core env, kept optional so
# `import rotorenv` stays ML-framework-free. Install with `pip install -e ".[rl]"`.
rl = [
    "stable-baselines3>=2.3",
]
# Cinematic 3D rendering (chase/POV cameras, saved MP4/GIF). Optional; the core
# env and the default matplotlib renderer never require these.
render = [
    "pyvista>=0.43",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4",
]

[tool.setuptools.packages.find]
include = ["rotorenv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
